bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: ';' expected but 'else' found.
  } else if (litMessage() == "A") {
    ^BDR:8: error: Unmatched closing brace '}' ignored here
	}
        ^