bdr.BDR.scala.code
var etat : Boolean = false
while (Boolean == false) {
  } else if (litMessage() == "A") {
    avance()
	}
}